# fish_bots

./: .gitignore  Cargo.toml  README.md  build_linux.sh  todo.md  wasm_build.sh
assets/data/: items.yaml  npcs.yaml  player.yaml  tiles.yaml
assets_dev/: sprites.aseprite  ui.aseprite
crates/game/: Cargo.toml
crates/game/src/: assets.rs  input.rs  lib.rs  web.rs
crates/game/src/scenes/: board.rs  game.rs  game_over.rs  mod.rs
crates/game_graphics/: Cargo.toml
crates/game_graphics/src/: globals.rs  input.rs  lib.rs  utils.rs
crates/game_graphics/src/board/: fish.rs  mod.rs  player.rs  tiles.rs
crates/game_graphics/src/draw/: bubbles.rs  mod.rs  player.rs  sprites.rs
crates/game_graphics/src/ui/: button.rs  span.rs
crates/game_logic/: Cargo.toml
crates/game_logic/src/: commands.rs  console.rs  events.rs  globals.rs  lib.rs  scripting.rs  startup.rs  utils.rs  world.rs
crates/game_logic/src/board/: mod.rs  player.rs  systems.rs
wasm_assets/: 04B_03.TTF:Zone.Identifier  index.html
