[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[[bin]]
path = "src/lib.rs"
name = "game"

[dependencies]
env_logger = "0.11"
rogalik = { workspace = true }

game_logic = { path = "../game_logic" }
game_graphics = { path = "../game_graphics" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "HtmlElement", "HtmlDivElement", "HtmlTextAreaElement", "HtmlSelectElement"]}
